// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render HeaderButtons Should HeaderButtons render correctly in CardScreen 1`] = `
<div
  className="movie-card__buttons"
>
  <a
    className="btn btn--play movie-card__button"
    href="/player/1/"
    onClick={[Function]}
  >
    <svg
      height="19"
      viewBox="0 0 19 19"
      width="19"
    >
      <use
        xlinkHref="#play-s"
      />
    </svg>
    <span>
      Play
    </span>
  </a>
  <a
    className="btn btn--list movie-card__button"
    href="/login/"
    onClick={[Function]}
  >
    <svg
      height="14"
      viewBox="0 0 18 14"
      width="18"
    >
      <use
        xlinkHref="#in-list"
      />
    </svg>
    <span>
      My list
    </span>
  </a>
</div>
`;

exports[`Render HeaderButtons Should HeaderButtons render correctly in CardScreen user auth 1`] = `
<div
  className="movie-card__buttons"
>
  <a
    className="btn btn--play movie-card__button"
    href="/player/1/"
    onClick={[Function]}
  >
    <svg
      height="19"
      viewBox="0 0 19 19"
      width="19"
    >
      <use
        xlinkHref="#play-s"
      />
    </svg>
    <span>
      Play
    </span>
  </a>
  <a
    className="btn btn--list movie-card__button"
    href="/login/"
    onClick={[Function]}
  >
    <svg
      height="14"
      viewBox="0 0 18 14"
      width="18"
    >
      <use
        xlinkHref="#in-list"
      />
    </svg>
    <span>
      My list
    </span>
  </a>
  <a
    className="btn movie-card__button"
    href="/cards/1/review/"
    onClick={[Function]}
  >
    Add review
  </a>
</div>
`;

exports[`Render HeaderButtons Should HeaderButtons render correctly in Main 1`] = `
<div
  className="movie-card__buttons"
>
  <a
    className="btn btn--play movie-card__button"
    href="/player/1/"
    onClick={[Function]}
  >
    <svg
      height="19"
      viewBox="0 0 19 19"
      width="19"
    >
      <use
        xlinkHref="#play-s"
      />
    </svg>
    <span>
      Play
    </span>
  </a>
  <a
    className="btn btn--list movie-card__button"
    href="/login/"
    onClick={[Function]}
  >
    <svg
      height="14"
      viewBox="0 0 18 14"
      width="18"
    >
      <use
        xlinkHref="#in-list"
      />
    </svg>
    <span>
      My list
    </span>
  </a>
</div>
`;
